---------------------------
  Jackdmp changes log
---------------------------

2007-05-04 Stephane Letz  <letz@grame.fr>

	* Steven Chamberlain patch to fix jack_port_type. Test for jack_port_type behaviour in jack_test.cpp tool.

2007-05-03 Stephane Letz  <letz@grame.fr>

	* Steven Chamberlain patch to fix jack_port_by_id export.

2007-04-28 Stephane Letz  <letz@grame.fr>

	* Add new jack_port_set_alias, jack_port_unset_alias and jack_port_get_aliases API.

2007-04-27 Stephane Letz  <letz@grame.fr>

	* Add missing -D__SMP__in OSX project.

2007-04-23 Stephane Letz  <letz@grame.fr>

	* Dmitry Baikov jackmp-time patch: add jack_get_time, jack_time_to_frames, jack_frames_to_time.

2007-04-01 Stephane Letz  <letz@grame.fr>

	* Merge JackGraphManager Remove and Release method in a unique Release method.

2007-03-04 Stephane Letz  <letz@grame.fr>

	* Dmitry Baikov patch for JackGraphManager.cpp.

2007-02-19 Stephane Letz  <letz@grame.fr>
	
	* Correct back JackAlsaDriver::Read method. 

2007-02-14 Stephane Letz  <letz@grame.fr>
	
	* Better error checking in PortAudio driver.

2007-02-07 Stephane Letz  <letz@grame.fr>
	
	* Thom Johansen fix for port buffer alignment issues.

2007-02-05 Stephane Letz  <letz@grame.fr>
	
	* Add Pieter Palmers FreeBob driver.
	* Thibault LeMeur ALSA driver patch.

2007-01-31 Stephane Letz  <letz@grame.fr>

	* Use pthread_attr_setstacksize in JackPosixThread class.

2007-01-30 Stephane Letz  <letz@grame.fr>

	* New LockAllMemory and UnlockAllMemory functions.

2007-01-29 Stephane Letz  <letz@grame.fr>

	* More robust activation/deactivation code, especially in case of client crash.

2007-01-27 Stephane Letz  <letz@grame.fr>

	* Uses a time out value of 10 sec in freewheel mode (like jack).

2007-01-21 Stephane Letz  <letz@grame.fr>

	* More client debug code: check if the client is still valid in every JackDebugClient method, check if the library context is still valid in every API call.

2007-01-14 Stephane Letz  <letz@grame.fr>
